fixed login and sign up - Constraints are broken on SignUp Functions
:)

Merge remote-tracking branch 'origin/master'

# Conflicts:
#	.idea/.gitignore
#	.idea/misc.xml
#	.idea/vcs.xml
#	CourseWork.iml
#	target/classes/Controllers/Event.class
#	target/classes/Controllers/Genre.class
#	target/classes/Controllers/Post.class
#	target/classes/Controllers/SocialLink.class
#	target/classes/Controllers/User.class

--- a/resources/client/css/Profile.css
+++ b/resources/client/css/Profile.css
@@ -38,7 +38,7 @@
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
     font-size: 30px;
-    text-align: center;}
+    text-align: left;}
 
 .Posts { grid-area: Posts;
     background-color: rgba(255, 255, 255, 0.8);
